@@ -47,7 +47,7 @@
 		
 		for (i in 1:nl) {
 			b <- new("GDALRasterBand", x@file@transient, i)
-			rgdal:::.gd_SetStatistics(b, as.double(statistics[i,]))
+			.gd_SetStatistics(b, as.double(statistics[i,]))
 		}
 	}
 	
